# Poly

./: .gitignore  Cargo.toml  LICENSE  README.md  RESEARCH.md  test.js
AITest/: .gitignore  docker-compose.yml  poly.toml
AITest/searxng/: settings.yml
AITest/src/: main.poly
AITest/web/: index.html
AITest/web/css/: base.css  canvas.css  chat.css  components.css  devicon.css  input.css  sidebar.css
AITest/web/js/: app.js  canvas.js  tools.js
AITest/web/js/models/: index.js
AITest/web/js/models/qwen3/: index.js
FeatureTest/: poly.toml
FeatureTest/src/: main.poly
FeatureTest/web/: app.js  index.html  styles.css
demo-app/: poly.toml
demo-app/src/: main.poly
demo-app/web/: app.js  index.html  styles.css
dialog-test/: poly.toml
dialog-test/src/: main.poly
dialog-test/web/: app.js  index.html  styles.css
docs/: API.md
ollama-chat/: poly.toml
ollama-chat/src/: main.poly
ollama-chat/web/: app.js  index.html  styles.css
poly/: Cargo.toml  README.md  build.rs
poly-ui/: Cargo.toml  README.md
poly-ui/examples/: counter.rs  ecs_benchmark.rs  interactive.rs  todo.rs
poly-ui/src/: lib.rs  main.rs
poly-ui/src/app/: hot_reload.rs  mod.rs  window.rs
poly-ui/src/core/: context.rs  ecs.rs  events.rs  mod.rs  state.rs  widget.rs
poly-ui/src/layout/: mod.rs
poly-ui/src/render/: gpu.rs  mod.rs  primitives.rs  renderer.rs  shader.wgsl  text.rs
poly-ui/src/runtime/: mod.rs
poly-ui/src/style/: mod.rs
poly-ui/src/web/: mod.rs
poly-ui/src/widgets/: button.rs  card.rs  container.rs  dialog.rs  image.rs  input.rs  list.rs  mod.rs  navigation.rs  progress.rs  scroll.rs  text.rs
poly-ui/web/: index.html
poly-vscode/: README.md  language-configuration.json  package.json
poly-vscode/syntaxes/: poly.tmLanguage.json
poly/docs/: STATE_AND_ROUTING.md  WEB_RENDERING.md
poly/examples/: counter.html  counter.poly  hello.poly  spa.html  spa.poly
poly/examples/polybrowser/: browser-ui.html  poly.toml
poly/examples/polybrowser/src/: main.poly
poly/examples/polybrowser/web/: app.js  index.html  styles.css
poly/examples/polyview-browser/: main.poly  poly.toml
poly/examples/polyview-browser/web/: app.js  index.html  styles.css
poly/src/: ai.rs  ast.rs  browser.rs  build.rs  clipboard.rs  config.rs  deeplink.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  multiview.rs  multiview_native.rs  native.rs  notification.rs  packages.rs  parser.rs  polyview.rs  single_instance.rs  sovereignty.rs  templates.rs  titlebar.rs  tray.rs  updater.rs  web.rs  webview.rs  webview_native.rs  window.rs
poly/web/: index.html
test-app/: .gitignore  poly.toml
test-app/src/: main.poly
test-app/web/: app.js  index.html  styles.css
